--- a/talks_workshops/2022-04-18-intro-to-cloud-computing/index.qmd
+++ b/talks_workshops/2022-04-18-intro-to-cloud-computing/index.qmd
@@ -3,7 +3,7 @@ title: "An Intro to Cloud Computing"
 description: |
   an interactive workshop on how to launch an Amazon EC2 instance
 author:
-  - name: Samantha Csik
+  - name: Samantha Shanny-Csik
     url: https://samanthacsik.github.io/
     orcid: 0000-0002-5300-3075
     affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) & The National Center for Ecological Analysis and Synthesis
