--- a/talks_workshops/2022-10-10-customizing-quarto-websites/index.qmd
+++ b/talks_workshops/2022-10-10-customizing-quarto-websites/index.qmd
@@ -3,7 +3,7 @@ title: "Customizing Quarto Websites"
 description: |
   make your website stand out using Sass & CSS
 author: 
-  - name: "Samantha Csik"
+  - name: "Samantha Shanny-Csik"
     url: https://samanthacsik.github.io/
     orcid: 0000-0002-5300-3075
     affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) & The National Center for Ecological Analysis and Synthesis
