--- a/talks_workshops/2021-08-31-customizing-your-personal-website-with-css/index.qmd
+++ b/talks_workshops/2021-08-31-customizing-your-personal-website-with-css/index.qmd
@@ -3,7 +3,7 @@ title: "Customizing Your Personal Website with CSS"
 description: |
   a brief intro to using CSS to customize {distill} websites
 author:
-  - name: Samantha Csik
+  - name: Samantha Shanny-Csik
     url: https://samanthacsik.github.io/
     orcid: 0000-0002-5300-3075
     affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) & The National Center for Ecological Analysis and Synthesis
