--- a/talks_workshops/2021-11-15-ide-tips-tricks/index.qmd
+++ b/talks_workshops/2021-11-15-ide-tips-tricks/index.qmd
@@ -3,7 +3,7 @@ title: "RStudio Tips & Tricks"
 description: |
   a schedule of RStudio IDE tips & tricks and other keyboard shortcuts
 author:
-  - name: Samantha Csik
+  - name: Samantha Shanny-Csik
     url: https://samanthacsik.github.io/
     orcid: 0000-0002-5300-3075
     affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) & The National Center for Ecological Analysis and Synthesis
