--- a/talks_workshops/2022-02-18-intro-to-shiny/index.qmd
+++ b/talks_workshops/2022-02-18-intro-to-shiny/index.qmd
@@ -3,7 +3,7 @@ title: "Intro to Shiny"
 description: |
   a hands-on coding workshop on how to build a shiny app
 author:
-  - name: Samantha Csik
+  - name: Samantha Shanny-Csik
     url: https://samanthacsik.github.io/
     orcid: 0000-0002-5300-3075
     affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) & The National Center for Ecological Analysis and Synthesis
