--- a/talks_workshops/2023-03-16-ggplot2/index.qmd
+++ b/talks_workshops/2023-03-16-ggplot2/index.qmd
@@ -3,7 +3,7 @@ title: "One workflow for building effective (and pretty) `{ggplot2}` data visual
 description: |
   a workshop on iteratively building ggplots
 author:
-  - name: Samantha Csik
+  - name: Samantha Shanny-Csik
     url: https://samanthacsik.github.io/
     orcid: 0000-0002-5300-3075
     affiliation: Master of Environmental Data Science Program @ The Bren School (UCSB) & The National Center for Ecological Analysis and Synthesis
