--- a/projects/2023-02-15-bren-student-data-explorer/index.qmd
+++ b/projects/2023-02-15-bren-student-data-explorer/index.qmd
@@ -14,14 +14,46 @@ draft: false
 
 In an effort to increase transparency surrounding student demographics and post-graduation career placement statistics, [The Bren School](https://bren.ucsb.edu/) hired R Shiny Developer Fellow, [Halina Do-Linh](https://github.com/hdolinh/) in summer 2022. Halina designed and built v1.0 of the public-facing [dashboard](https://shinyapps.bren.ucsb.edu/student-data-explorer/) for exploring these data. 
 
-Since then, the proverbial torch was passed to me for continued maintenance and updates. I collaborate with the Bren Admissions and [Career Services](https://bren.ucsb.edu/career-services) Teams, as well as MEDS Program Coordinator, [Jamie Montgomery](https://www.jamiecmontgomery.com/), to update data, modify visuals, and refactor the code, as needed, each year.
+Since then, the proverbial torch was passed to me for continued maintenance and updates. I collaborate with the Bren Admissions and [Career Services](https://bren.ucsb.edu/career-services) Teams, as well as MEDS Program Coordinator, [Jamie Montgomery](https://www.jamiecmontgomery.com/), to update data, modify visuals, and refactor the code, as needed, each year. My most significant contribution so far is the Spring 2025 refactor and development of comprehensive wiki documentation. This rewrite focused on establishing a consistent, organized code structure and workflow, and on clearly documenting a standard operating procedure to support future updates.
 
 <br>
 
-<img class="center-img" src="dashboard.jpeg" alt="A online dashboard with a banner image depicting the Bren School building with the ocean to the left. Atop the image reads in all capital letters, 'BREN STUDENT DATA EXPLORER'. Beneath the banner image are two side-by-side boxes with text. The top of the left-hand box reads, 'Learn about students at the Bren School', and the top of the right-hand box reads, 'About the data'. A left-hand sidebar indicates that we're viewing the Welcome page. Two other pages are listed below: Demographics and Career Outcomes." width="70%">
+:::: {.grid}
+
+::: {.g-col-12 .g-col-md-6}
+
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "95%"
+knitr::include_graphics("dashboard.png")
+```
+<!-- <img class="center-img" src="dashboard.png" width="70%"> -->
 
 ::: {.gray-italic .center-text}
-The welcome page of the Bren Student Data Explorer, accessible at <https://shinyapps.bren.ucsb.edu/student-data-explorer/>
+The Career Outcomes page of the Bren Student Data Explorer, accessible at [https://shinyapps.bren.ucsb.edu/student-data-explorer/](https://shinyapps.bren.ucsb.edu/student-data-explorer/){target="_blank"}
 :::
 
+:::
 
+::: {.g-col-12 .g-col-md-6}
+
+```{r}
+#| eval: true
+#| echo: false
+#| fig-align: "center"
+#| out-width: "95%"
+knitr::include_graphics("wiki.png")
+```
+
+<!-- <img class="center-img" src="dashboard.png" width="70%"> -->
+::: {.gray-italic .center-text}
+The Bren Student Data Explorer [wiki](https://github.com/UCSB-MEDS/shiny-dashboard/wiki){target="_blank"}, which houses documentation and detailed instructions for updating and Maintaining the dashboard
+:::
+
+:::
+
+::::
+
+<!-- alt="A online dashboard with a banner image depicting the Bren School building with the ocean to the left. Atop the image reads in all capital letters, 'BREN STUDENT DATA EXPLORER'. Beneath the banner image are two side-by-side boxes with text. The top of the left-hand box reads, 'Learn about students at the Bren School', and the top of the right-hand box reads, 'About the data'. A left-hand sidebar indicates that we're viewing the Welcome page. Two other pages are listed below: Demographics and Career Outcomes."  -->
