--- a/index.qmd
+++ b/index.qmd
@@ -25,39 +25,11 @@ about:
 ---
 
 ::: {#bio}
-Hi there! I'm Sam Shanny-Csik (pronounced "shan-knee chick"). Professionally, I love **teaching data science skills**, learning and implementing **inclusive pedagogical approaches**, and the communities that support both of those things. Outside of work, I'm an **avid hiker**, novice (but passionate) meal-maker, and I really love the color green. Poke around to learn more [about me](about.qmd) and my work!
+Hi there! I'm Sam Shanny-Csik (pronounced "shan-knee chick"). Professionally, I love **teaching data science skills**, learning and implementing **inclusive pedagogical approaches**, and the communities that support both of those things. Outside of work, I'm an **avid hiker**, novice (but passionate) meal-maker, and an on-again-off-again book worm. Poke around to learn more [about me](about.qmd) and my work!
+
+<!-- Hi there! I'm Sam Shanny-Csik (pronounced "shan-knee chick"). Professionally, I love **teaching data science skills**, learning and implementing **inclusive pedagogical approaches**, and the communities that support both of those things. Outside of work, I'm an **avid hiker**, novice (but passionate) meal-maker, and I really love the color green. Poke around to learn more [about me](about.qmd) and my work! -->
 
 ::: {#landing-icons}
 [{{< fa brands linkedin title="linkedin" >}}](https://www.linkedin.com/in/samanthacsik/){target="_blank"} &nbsp; [{{< fa brands github title="github" >}}](https://github.com/samanthacsik){target="_blank"} &nbsp; [{{< fa brands bluesky title="bluesky" >}}](https://bsky.app/profile/samcsik.bsky.social){target="_blank"} &nbsp; [{{< fa envelope title="envelope" >}}](mailto:scsik@ucsb.edu)
 :::
 :::
-
-<!-- ### hi there!     -->
-
-<!-- I'm Sam (and my last name is pronounced "chick"). I'm the Data Training Coordinator at the [National Center for Ecological Analysis & Synthesis](https://www.nceas.ucsb.edu/) (NCEAS) located at UC Santa Barbara, where I'm working to develop and teach data science training curricula for the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science) (MEDS) program and other data science initiatives across NCEAS and UCSB. I am also a co-organizer of [R-Ladies Santa Barbara](https://www.meetup.com/rladies-santa-barbara/), a local data science group which works to promote gender diversity in the R community. In my spare time, you'll typically find me hiking with my pup or cooking family dinners with friends. -->
-
-<!-- ----------------------------------------------------------------------------------------------------------------------------------- -->
-
-<!-- ### education -->
-
-<!-- <div class="topbr"> -->
-<!-- <p class="custom-subtitle">{{< fa graduation-cap title="A graduation cap" >}} **MS in Ecology, Evolution & Marine Biology, 2020**</p>   -->
-<!-- <p class="custom-subtitle2">University of California, Santa Barbara</p> -->
-
-<!-- <p class="custom-subtitle">{{< fa graduation-cap title="A graduation cap" >}} **BS in Marine Biology, 2016**</p>   -->
-<!-- <p class="custom-subtitle2">Northeastern University</p> -->
-<!-- </div> -->
-
-<!-- ----------------------------------------------------------------------------------------------------------------------------------- -->
-
-<!-- ### experience -->
-
-<!-- <div class="topbr"> -->
-<!-- <p class="custom-subtitle">{{< fa chalkboard-teacher title="A teacher at a chalkboard" >}} **Data Training Coordinator, 2021-present**</p>    -->
-<!-- <p class="custom-subtitle2">National Center for Ecological Analysis & Synthesis</p>   -->
-
-<!-- <p class="custom-subtitle">{{< fa chart-bar title="A bar chart" >}} **Data Science Fellow, 2020-2021**</p>     -->
-<!-- <p class="custom-subtitle2">National Center for Ecological Analysis & Synthesis</p> -->
-<!-- </div> -->
-
-<!-- FOR REFERENCE: `r fontawesome::fa("graduation-cap", fill = "#98A08D", a11y = "sem")` # stopped working 5/1/2023? -->
